:bug: Set text color white to product item caption on mobile

--- a/leblanc/components/Product/ProductItem/ProductItem.module.css
+++ b/leblanc/components/Product/ProductItem/ProductItem.module.css
@@ -94,11 +94,9 @@
 .captionCommonName {
   /* @apply pl-3; */
 }
-/* 
+
 :global(.dark) {
-  & .detailsContent {
-    & > span {
-      @apply text-text-primary;
-    }
+  & .captionMobile {
+    @apply text-text-secondary;
   }
-} */
+}
